Первый коммит: добавлены HTML и CSS файлы

--- a/index.html
+++ b/index.html
@@ -6,18 +6,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Привет, я Kirill!</h1>
-        <p>Fullstack-разработчик: C#, ASP.NET, HTML, CSS, JS</p>
-    </header>
+    <main>
+        <h1>Web Browsers</h1>
+        <p>Google Chrome, Firefox и Internet Explorer являются самыми популярными браузерами сегодня.</p>
 
-    <section>
-        <h2>Обо мне</h2>
-        <p>Изучаю Fullstack-разработку с нуля. Мечтаю создавать мощные проекты.</p>
-    </section>
+        <article>
+            <h1>Google Chrome</h1>
+            <p>
+                Google Chrome - это бесплатный веб-браузер с открытым исходным кодом, разработанный Google,
+                выпущенный в 2008 году.
+            </p>
+        </article>
 
-    <footer>
-        <p>📧 kirilwolf@gmail.com | 🐙 <a href="https://github.com/kirillwolf" target="_blank">GitHub</a></p>
+        <article>
+            <h1>Internet Explorer</h1>
+            <p>Internet Explorer - бесплатный веб-браузер от Microsoft, выпущенный в 1995 году.</p>
+        </article>
+
+        <article>
+            <h1>Mozilla Firefox</h1>
+            <p>Firefox - это бесплатный веб-браузер с открытым исходным кодом от Mozilla, выпущенный в 2004 году.</p>
+        </article>
+
+        <button id="helloBtn">Нажми на меня</button>
+        <header>
+            <h1>Привет, я Kirill!</h1>
+            <p>Fullstack-разработчик: C#, ASP.NET, HTML, CSS, JS</p>
+        </header>
+
+        <section>
+            <h2>Обо мне</h2>
+            <p>Изучаю Fullstack-разработку с нуля. Мечтаю создавать мощные проекты.</p>
+        </section>
+        <button id="toggleThemeBtn">Сменить тему</button>
+        <footer>
+            <p>📧 kirilwolf@gmail.com | 🐙 <a href="https://github.com/kirillwolf" target="_blank">GitHub</a></p>
+    </main>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
